--- a/packages/thicket-webapp/src/App/Communities/Communities.css
+++ b/packages/thicket-webapp/src/App/Communities/Communities.css
@@ -27,6 +27,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  align-self: flex-start;
   display: grid;
   grid-template-columns: 1fr;
   justify-content: flex-start;
@@ -65,6 +66,11 @@
 
 /* desktop */
 @media (min-width: 600px){
+  .communities{
+    display: grid;
+    grid-template-rows: auto 1fr;
+  }
+
   .communities__count{
     display: inline-block;
   }
