--- a/packages/thicket-webapp/src/App/Community/Community.css
+++ b/packages/thicket-webapp/src/App/Community/Community.css
@@ -1,5 +1,5 @@
 .community{
-  padding: 0 1.375em;
+  padding: 0 1em;
   display: grid;
   grid-template-columns: repeat(12, auto);
   align-items: center;
@@ -177,6 +177,8 @@
 @media (min-width: 600px){
   .community{
     grid-template-columns: auto auto auto auto 1fr 1fr auto auto auto;
+    grid-template-rows: auto auto 1fr;
+    height: 100%;
   }
 
   .community__back h3{
@@ -284,4 +286,21 @@
     /* header height for desktop */
     top: 50px;
   }
+
+  .community__create-onTop{
+    top: 0;
+  }
+
+  .community__content-wrap{
+    align-self: flex-start;
+    height: 100%;
+  }
+
+  .community__spinner{
+    height: 66.666666%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 }
